// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserReducers should handle all defined error types 1`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "loginFailed": false,
      "pending": false,
      "userInfo": Object {},
    },
    "user": Object {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "pending": false,
      "userInfo": Object {},
    },
  },
  "type": "USER_CREATE_REJECTED",
}
`;

exports[`UserReducers should handle all defined error types 2`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "loginFailed": false,
      "pending": false,
      "userInfo": Object {},
    },
    "user": Object {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "pending": false,
      "userInfo": Object {},
    },
  },
  "type": "USER_DELETE_REJECTED",
}
`;

exports[`UserReducers should handle all defined error types 3`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "loginFailed": false,
      "pending": false,
      "userInfo": Object {},
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "userInfo": Object {},
    },
  },
  "type": "USER_INFO_REJECTED",
}
`;

exports[`UserReducers should handle all defined error types 4`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "loginFailed": true,
      "pending": false,
      "userInfo": Object {},
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "userInfo": Object {},
    },
  },
  "type": "USER_LOGIN_REJECTED",
}
`;

exports[`UserReducers should handle all defined error types 5`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "loginFailed": false,
      "pending": false,
      "userInfo": Object {},
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "userInfo": Object {},
    },
  },
  "type": "USER_LOGOUT_REJECTED",
}
`;

exports[`UserReducers should handle all defined fulfilled types 1`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "loginFailed": false,
      "pending": false,
      "userInfo": Object {},
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "pending": false,
      "userInfo": undefined,
    },
  },
  "type": "USER_CREATE_FULFILLED",
}
`;

exports[`UserReducers should handle all defined fulfilled types 2`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "loginFailed": false,
      "pending": false,
      "userInfo": Object {},
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "pending": false,
      "userInfo": undefined,
    },
  },
  "type": "USER_DELETE_FULFILLED",
}
`;

exports[`UserReducers should handle all defined fulfilled types 3`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": true,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "loginFailed": false,
      "pending": false,
      "userInfo": undefined,
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "userInfo": Object {},
    },
  },
  "type": "USER_INFO_FULFILLED",
}
`;

exports[`UserReducers should handle all defined fulfilled types 4`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": true,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "loginFailed": false,
      "pending": false,
      "userInfo": Object {},
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "userInfo": Object {},
    },
  },
  "type": "USER_LOGIN_FULFILLED",
}
`;

exports[`UserReducers should handle all defined fulfilled types 5`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "loginFailed": false,
      "pending": false,
      "userInfo": Object {},
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "userInfo": Object {},
    },
  },
  "type": "USER_LOGOUT_FULFILLED",
}
`;

exports[`UserReducers should handle all defined pending types 1`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "loginFailed": false,
      "pending": false,
      "userInfo": Object {},
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": true,
      "userInfo": Object {},
    },
  },
  "type": "USER_CREATE_PENDING",
}
`;

exports[`UserReducers should handle all defined pending types 2`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "loginFailed": false,
      "pending": false,
      "userInfo": Object {},
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": true,
      "userInfo": Object {},
    },
  },
  "type": "USER_DELETE_PENDING",
}
`;

exports[`UserReducers should handle all defined pending types 3`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "loginFailed": false,
      "pending": true,
      "userInfo": Object {},
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "userInfo": Object {},
    },
  },
  "type": "USER_INFO_PENDING",
}
`;

exports[`UserReducers should handle all defined pending types 4`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "loginFailed": false,
      "pending": true,
      "userInfo": Object {},
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "userInfo": Object {},
    },
  },
  "type": "USER_LOGIN_PENDING",
}
`;

exports[`UserReducers should handle all defined pending types 5`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "loginFailed": false,
      "pending": true,
      "userInfo": Object {},
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "userInfo": Object {},
    },
  },
  "type": "USER_LOGOUT_PENDING",
}
`;
